@@ -615,9 +615,11 @@ update_for_new_location (NautilusWindow *window)
          * Eventually, this will not be necessary when we restructure the 
          * sidebar itself to be a NautilusViewFrame.
          */
-        nautilus_sidebar_set_uri (window->sidebar,
-                                  window->details->location,
-                                  window->details->title);
+	if (window->sidebar != NULL) {
+		nautilus_sidebar_set_uri (window->sidebar,
+					  window->details->location,
+					  window->details->title);
+	}
 }
 
 static gboolean
@@ -1030,7 +1032,9 @@ handle_view_failure (NautilusWindow *window,
 	if (view_frame_is_sidebar_panel (view)) {
                 report_sidebar_panel_failure_to_user (window, view);
 		current_iid = nautilus_view_frame_get_view_iid (view);
-		nautilus_sidebar_hide_active_panel_if_matches (window->sidebar, current_iid);
+		if (window->sidebar != NULL) {
+			nautilus_sidebar_hide_active_panel_if_matches (window->sidebar, current_iid);
+		}
 		disconnect_and_destroy_sidebar_panel (window, view);
 	} else {
 	        if (view == window->content_view) {
@@ -1487,7 +1491,9 @@ nautilus_window_set_sidebar_panels (NautilusWindow *window,
 						 compare_view_identifier_with_iid);
 		if (found_node == NULL) {
 			current_iid = nautilus_view_frame_get_view_iid (sidebar_panel);
-			nautilus_sidebar_hide_active_panel_if_matches (window->sidebar, current_iid);
+			if (window->sidebar != NULL) {
+				nautilus_sidebar_hide_active_panel_if_matches (window->sidebar, current_iid);
+			}
 			disconnect_and_destroy_sidebar_panel (window, sidebar_panel);
 		} else {
                         identifier = (NautilusViewIdentifier *) found_node->data;
